[project]
name = "excalibur-py"
version = "1.0.1"
description = "A web interface to extract tabular data from PDFs"
authors = [
    {name = "Vinayak Mehta", email = "vmehta94@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
    "camelot-py>=1.0.0",
    "celery>=4.1.1",
    "click>=8.0.1",
    "configparser>=7.1.0",
    "Flask>=3.1.0",
    "SQLAlchemy>=1.2.12",
    "Werkzeug>=3.1.3",
    "pypdfium2>=4",
    "Pillow>=11.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/camelot-dev/excalibur"
Repository = "https://github.com/camelot-dev/excalibur"
Documentation = "https://excalibur-py.readthedocs.io/"
Changelog = "https://github.com/camelot-dev/excalibur/releases"

[project.optional-dependencies]
dev = [
    "pytest>=3.8.0",
    "pytest-cov>=6.0.0",
    "pytest-runner>=6.0.1",
    "sphinx>=4.3.2",
]

[project.scripts]
excalibur = "excalibur.cli:cli"
