[metadata]
name = excalibur-py
version = attr: version
author = Vinayak Mehta
author_email = vmehta94@gmail.com
license = MIT
description = A web interface to extract tabular data from PDFs.
url = https://excalibur-py.readthedocs.io/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    camelot-py[cv]>=0.7.1
    celery>=4.1.1
    Click>=7.0
    configparser>=3.5.0, <3.6.0
    Flask>=1.0.2
    SQLAlchemy>=1.2.12
include_package_data = True

[options.packages.find]
    exclude = 
        tests

[options.entry_points]
console_scripts = excalibur = excalibur.cli:cli

[options.extras_require]
all =
    camelot-py[cv]>=0.7.1
    celery>=4.1.1
    Click>=7.0
    configparser>=3.5.0, <3.6.0
    Flask>=1.0.2
    SQLAlchemy>=1.2.12
    mysqlclient>=1.3.6
mysql = mysqlclient>=1.3.6
dev =
    codecov>=2.0.15
    pytest>=3.8.0
    pytest-cov>=2.6.0
    pytest-runner>=4.2
    Sphinx>=1.8.1


[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --cov-config .coveragerc --cov-report term --cov-report xml --cov=camelot tests
python_files = tests/test_*.py